[package]
name = "prism"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls", "stream"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "2.0.3"
rand = { default-features = false, version = "0.8.5" }
chrono = "0.4.31"
tokio = { version = "1.25.0", default-features = false, features = ["signal", "rt-multi-thread", "macros"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features = ["http-util"] }
tower-http = { version = "0.6", features = ["cors"] }
async-sse = "5.1.0"
anyhow = "1"
futures-util = { version = "0.3", features = ["io"] }

# Logging
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["env-filter", "fmt"] }

# Global variables
once_cell = "1.18"

# Command Line Interface
clap = { version = "4.0", features = ["std", "env", "derive", "help"] }
uuid = "1.8.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4.2"

[build-dependencies]
build-data = "0"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
